Fix up tests. Include test for jspm bundle.

--- a/test.jade
+++ b/test.jade
@@ -1,6 +1,6 @@
 #jade Hello Jade!!
-if local == "no"
+if local1 == "no"
   p Locals working? yes
 else
   p Locals working? no
-p Interpolation? #{local} problem!
+p Interpolation? #{local1} problem!
