"Include" is working

--- a/d1/test.jade
+++ b/d1/test.jade
@@ -5,4 +5,6 @@ else
   p Locals working? no
 p Interpolation? #{local1} problem!
 include ./d2/nested.jade
-
+h2 Indented include?
+ul
+  include ./d2/nested2.jade
