Renamed include files

--- a/d1/test.jade
+++ b/d1/test.jade
@@ -4,7 +4,7 @@ if local1 == "no"
 else
   p Locals working? no
 p Interpolation? #{local1} problem!
-include ./d2/nested.jade
+include ./d2/include1.jade
 h2 Indented include?
 ul
-  include ./d2/nested2.jade
+  include ./d2/include2.jade
